--- a/Copernican-Sky/Copernican-Sky.CSharp.csproj
+++ b/Copernican-Sky/Copernican-Sky.CSharp.csproj
@@ -63,6 +63,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\doorOW.cs" />
     <Compile Include="Assets\Scripts\heroOW.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
